complete desktop and mobile view

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 					<div class="about-us-content">
 						<span>About Us</span>
 						<h2>Junk Car Buyers</h2>
-						<p>Let’s put this simply: We like cars, whether they are broken down and beaten or just generally unwanted. Our story involves a 30+ year long career working in car repair and towing. These two ideas go together well when purchasing “Junk” cars.</p>
+						<p>Lets put this simply: We like cars, whether they are broken down and beaten or just generally unwanted. Our story involves a 30+ year long career working in car repair and towing. These two ideas go together well when purchasing “Junk” cars.</p>
 						<br>
 						<p>The owner of selljunkcarnj.com is also the owner of Dave's Auto and Towing with three locations in New Jersey. His family is born and raised in New Jersey. They are a locally owned and locally operated company who put their money right back into the community - no nationally operated outfit here.</p>
 						<br>
